--- a/Source_1/Data_Type_&_Operators/index.html
+++ b/Source_1/Data_Type_&_Operators/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Check console for the code</title>
+    <title>Data types & Operators</title>
 </head>
 <body>
+    <h1>Check console for the code</h1>
     <script src="script.js"></script>
+    
 </body>
 </html>
