improved the data types and operators

--- a/Source_1/Data_Type_&_Operators/index.html
+++ b/Source_1/Data_Type_&_Operators/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Check console for the code</h1>
-    <script src="script.js"></script>
+    <script src="Data_Type.js"></script>
+    <script src= "Operators.js"></script>
     
 </body>
 </html>
